UPDATE: session posts

--- a/_posts/2020-10-19-session02.md
+++ b/_posts/2020-10-19-session02.md
@@ -1,27 +1,27 @@
 ---
 layout: post
-title: "session 2: matrices"
+title: "session 2: matrices are linear transformations"
 tags:
 ---
 
 # Topics
 
-1. Matrix multiplication. 
-2. Matrix transpose.
-3. Examples: 
-    1. with dependent columns; 
-    2. with independent columns; 
-    3. square symmetric; 
-    4. rectangular; 
-    5. diagonal.
-4. Column (Row) spaces of a matrix A: C(A) and R(A). 
-5. Column and Row Rank.
-6. Rank 1 matrices. How do they look like?
-7. Null space N(A) of a matrix A – systems of linear equations revisited.
-8. Linear Maps. Null space and image of a linear map.
+1. Matrix multiplication recap.
+2. Column and row spaces of a matrix: C(A) and R(A).
+3. Matrices represent linear maps.
+4. Rank of a matrix.
+5. Composition of linear maps is equivalent to matrix multiplication
+6. Rank 1 matrices. How do they arise?
+7. Solving linear equations: the null space N(A).
+8. Transpose of a matrix.
 
 
 # Required Content
+
+1. [Five ways to think about matrix multiplication (up to 21:15)](https://www.youtube.com/watch?v=FX4C-JpTFgY)
+2. [Linear transformations and matrices (10:58)](https://www.youtube.com/watch?v=kYB8IZa5AuE&list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab&index=3)
+3. [Matrix multiplication as composition (10:03)](https://www.youtube.com/watch?v=XkY2DOUCWMU&list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab&index=4)
+4. [Three-dimensional linear transformations (4:45)](https://www.youtube.com/watch?v=rHLEWRxRGiM&list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab&index=5)
 
 
 # Exercises
@@ -29,4 +29,3 @@ tags:
 
 # Supplementary Content
 
-[Gene H Golub's bibliography](https://www.press.jhu.edu/books/supplemental/MatrixComputations4th_bibliography.pdf)
