--- a/_posts/2020-10-21-session03.md
+++ b/_posts/2020-10-21-session03.md
@@ -1,23 +1,26 @@
 ---
 layout: post
-title: "session 3: elimination"
+title: "session 3: dissecting linear transformations"
 tags:
 ---
 
 # Topics
 
-1. Gauss-Jordan elimination
-2. Fundamental theorem of linear algebra
-3. CR and LU decomposition
-4. Matrix inverses
-5. How to find the inverse of a matrix with elimination
-6. Determinant
+1. Computing the inverse of a linear transformation
+2. Gauss-Jordan elimination
+3. The fundamental theorem of linear algebra
+4. CR decomposition
+5. The determinant
 
 
 # Required Content
 
+1. [What does elimination do? (00:00)](https://randomvideo.org)
+2. [The determinant (10:02)](https://www.youtube.com/watch?v=Ip3X9LOh2dk&list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab&index=6)
 
 # Exercises
 
 
 # Supplementary Content
+
+[Using Gauss-Jordan elimination to reason about linear maps]({{ site.baseurl }}{% link docs/elimination-simple.pdf  %})
