--- a/_posts/2020-10-26-session04.md
+++ b/_posts/2020-10-26-session04.md
@@ -1,5 +1,44 @@
 ---
 layout: post
-title: "session 4: linear maps (tutorial)"
+title: "<b>session 4: tutorial on linear maps</b>"
 tags:
 ---
+
+# Instructions
+
+[Tutorial on linear maps]({{ site.baseurl }}{% link docs/1-linear_transformations.html %})
+
+
+# Required Tasks
+
+Make sure to be well prepared for the session.
+
+## Material
+
+Watch the following videos:
+
+[//]: # (This may be the most platform independent comment)
+[//]: # [Linear transformations and matrices, by 3blue1brown](https://www.youtube.com/watch?v=kYB8IZa5AuE&list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab&index=3).
+[//]: # [Matrix multiplication as composition](https://www.youtube.com/watch?v=XkY2DOUCWMU)
+- [More on linear independence](https://en.khanacademy.org/math/linear-algebra/vectors-and-spaces/linear-independence/v/more-on-linear-independence)
+- [Relation between linear independence and null space](https://en.khanacademy.org/math/linear-algebra/vectors-and-spaces/null-column-space/v/null-space-3-relation-to-linear-independence)
+
+
+Do the following exercises:
+
+- [Guess the matrix that describes the transformation](https://en.khanacademy.org/math/linear-algebra/matrix-transformations/linear-transformations/a/practice-associating-matrices-with-transformations).
+
+
+Check that you can access the following shiny app:
+
+[https://massonix.shinyapps.io/linear_transformations/](https://massonix.shinyapps.io/linear_transformations/)
+
+
+## Install software
+
+- [R 4.0](https://cran.r-project.org/doc/manuals/r-devel/R-admin.html)
+- [Rstudio](https://rstudio.com/products/rstudio/download/)
+- [Bioconductor](https://www.bioconductor.org/install/)
+- [pHeatmap](https://cran.r-project.org/web/packages/pheatmap/pheatmap.pdf)
+- [Seurat](https://cran.r-project.org/web/packages/Seurat/index.html)
+- [SeuratData](https://github.com/satijalab/seurat-data)
