--- a/_posts/2020-11-02-session06.md
+++ b/_posts/2020-11-02-session06.md
@@ -22,4 +22,5 @@ tags:
 
 # Supplementary Content
 
-1. Achieving QR with [planar rotations](https://en.wikipedia.org/wiki/Givens_rotation)
+1. [Systems of linear equations can be seen as projections]({{ site.baseurl }}{% link docs/projection-simple.pdf  %})
+2. [Achieving QR with planar rotations](https://en.wikipedia.org/wiki/Givens_rotation)
