--- a/_posts/2020-11-04-session07.md
+++ b/_posts/2020-11-04-session07.md
@@ -1,5 +1,35 @@
 ---
 layout: post
-title: "session 7: orthogonal projection (tutorial)"
+title: "<b>session 7: tutorial on orthogonal projections</b>"
 tags:
 ---
+
+
+# Instructions
+
+[Tutorial on orthogonal projections onto subspaces]({{ site.baseurl }}{% link docs/2-projections_onto_subspaces.html %})
+
+# Required Tasks
+
+## Material
+
+- Watch the MIT lectures explaining [projections onto subspaces](https://www.youtube.com/watch?v=Y_Ac6KiQ1t0) and [least squares](https://www.youtube.com/watch?v=osh80YCg_GM).
+- Watch the following Khan Academy videos:
+  - [Least squares approximation](https://en.khanacademy.org/math/linear-algebra/alternate-bases/orthogonal-projections/v/linear-algebra-least-squares-approximation)
+  - [Another least squares example](https://www.khanacademy.org/math/linear-algebra/alternate-bases/orthogonal-projections/v/linear-algebra-another-least-squares-example)
+- Read points 2.3 and 3 of the iconic ["Tidy Data"](https://vita.had.co.nz/papers/tidy-data.pdf) paper by Hadley Wickham.
+- Read this article summarising the main points of ["The Grammar of Graphics"](https://towardsdatascience.com/a-comprehensive-guide-to-the-grammar-of-graphics-for-effective-visualization-of-multi-dimensional-1f92b4ed4149).
+
+The majority of the reasoning and examples used in this tutorial come from the 4th Chapter of the book ["Introduction to Linear Algebra"](https://math.mit.edu/~gs/linearalgebra/), by Gilbert Strang.
+
+## Install software
+
+- [tidyverse](https://www.tidyverse.org/)
+- [gapminder](https://cran.r-project.org/web/packages/gapminder/index.html)
+- [matlib](https://cran.r-project.org/web/packages/matlib/index.html)
+- [MASS](https://cran.r-project.org/web/packages/MASS/MASS.pdf)
+
+
+# Tools
+
+[Visualization of orthogonal projections in 3D space](https://massonix.shinyapps.io/projections_onto_subspaces/)
