--- a/_posts/2020-11-11-session09.md
+++ b/_posts/2020-11-11-session09.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "session 9: SVD"
+title: "session 9: singular value decomposition (SVD)"
 tags:
 ---
 
@@ -8,9 +8,10 @@ tags:
 # Topics
 
 
-1. Singular Value Decomposition: $ AV=U \Sigma $. $U$-singular vectors, $V$-singular vectors and singular values.
-2. Matrix norms.
-3. Low-rank approximation of a matrix: Eckart-Young.
+1. Singular Value Decomposition: 
+\[ A=U \Sigma V^t \] 
+2. Singular values, $U$-singular vectors and $V$-singular vectors.
+3. Matrix norms and low-rank approximation of a matrix: Eckart-Young.
 4. Computing SVDs by hand. 
     1. Computing V (right) with an orthonormal eigenbasis of $ A^tA $.
     2. Computing U from V.
