--- a/_posts/2020-12-02-session15.md
+++ b/_posts/2020-12-02-session15.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "session 15: MLE and backpropagation (tutorial)"
+title: "<b>session 15: tutorial on MLE and backpropagation</b>"
 tags:
 ---
 
