--- a/_posts/2020-10-28-session05.md
+++ b/_posts/2020-10-28-session05.md
@@ -10,14 +10,12 @@ tags:
 1. Change of basis
 2. Change of coordinates
 3. Linear maps seen through different bases
-
+4. Exercise practice dojo
 
 # Required Content
 
 
-
 # Exercises
-
 
 
 # Supplementary Content
