--- a/_posts/2020-11-02-session06.md
+++ b/_posts/2020-11-02-session06.md
@@ -7,7 +7,7 @@ tags:
 
 # Topics
 
-1. Orthogonal vectors.
+1. Dot product and orthogonal vectors.
 2. Orthogonal matrices. Main properties: $ Q^t=Q^{-1} $
 3. Orthogonal spaces
 4. Important fact: $ N(A) \perp R(A) $ and $ N(A^t) \perp C(A) $
