--- a/_posts/2020-10-14-session01.md
+++ b/_posts/2020-10-14-session01.md
@@ -8,10 +8,10 @@ tags:
 # Course Presentation
 
 0. Who is who
-1. How will things work during the course
+1. How things will work during the course
 2. What tasks are expected from students
-3. How students will be evaluated: check the Evaluation section in the [landing page]({{ site.baseurl }}{% link index.md %})
-4. What we will do during the scheduled sessions: check the Overview section in the [landing page]({{ site.baseurl }}{% link index.md %})
+3. How students will be evaluated -- check Evaluation in [landing page]({{ site.baseurl }}{% link index.md %})
+4. What we will do during the online sessions: check Overview in [landing page]({{ site.baseurl }}{% link index.md %})
 
 
 # Syllabus
