--- a/_posts/2020-10-14-session01.md
+++ b/_posts/2020-10-14-session01.md
@@ -32,6 +32,11 @@ Official syllabus pending
 7. Basis of a vector space. Dimension.
 
 
+# Session Notes
+
+[session 1 whiteboard]({{ site.baseurl }}{% link docs/session-1-20201014.pdf %})
+
+
 # Homework
 
 ## Online Content
@@ -39,10 +44,10 @@ Official syllabus pending
 1. [Vectors, what even are they? (9:52)](https://www.youtube.com/watch?v=fNk_zzaMoSs&list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab&index=1&t=424s)
 2. [Linear combinations, span, and basis vectors (9:59)](https://www.youtube.com/watch?v=k7RM-ot2NWY&list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab&index=2)
 
+
 ## Exercises
 
 [Exercises]({{ site.baseurl }}{% link exercises/exercises-session1.pdf %})
-
 
 
 # Supplementary Content
