ADD: supplementary video about linear independence in session 1

--- a/_posts/2020-10-14-session01.md
+++ b/_posts/2020-10-14-session01.md
@@ -56,4 +56,4 @@ Official syllabus pending
 online lectures taught by Gilbert Strang. This is an ultra-condensed summary of everything that we will cover through 
 sessions 1-10. Recommended as wide overview-recap.
 2. [Independence, basis and dimension (13:19)](https://www.youtube.com/watch?v=eeMJg4uI7o0).
-
+3. [Checking linear independence in practice (17:37)](https://en.khanacademy.org/math/linear-algebra/vectors-and-spaces/linear-independence/v/more-on-linear-independence)
