UPDATE: content in session posts

--- a/_posts/2020-10-21-session03.md
+++ b/_posts/2020-10-21-session03.md
@@ -23,4 +23,4 @@ tags:
 
 # Supplementary Content
 
-[Using Gauss-Jordan elimination to reason about linear maps]({{ site.baseurl }}{% link docs/elimination-simple.pdf  %})
+1. [Using Gauss-Jordan elimination to reason about linear maps]({{ site.baseurl }}{% link docs/elimination-simple.pdf  %})
