UPDATE: added links to new videos and content

--- a/_posts/2020-10-19-session02.md
+++ b/_posts/2020-10-19-session02.md
@@ -23,6 +23,13 @@ tags:
 3. [Matrix multiplication as composition (10:03)](https://www.youtube.com/watch?v=XkY2DOUCWMU&list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab&index=4)
 4. [Three-dimensional linear transformations (4:45)](https://www.youtube.com/watch?v=rHLEWRxRGiM&list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab&index=5)
 
+# Session Crash Recovery
+
+[Recording of the last part of session](https://drive.google.com/file/d/1Kh4XgmbLn-ohDN_F-D3ngqxOLdXc87Gz/view?usp=sharing)
+
+# Session Notes
+
+[Whiteboard](https://drive.google.com/file/d/1Sp8ip3BFgJUh2H6JmaOaHgtpMwUbBnqT/view?usp=sharing)
 
 # Exercises
 
