--- a/_posts/2020-10-21-session03.md
+++ b/_posts/2020-10-21-session03.md
@@ -6,20 +6,22 @@ tags:
 
 # Topics
 
-1. Gauss-Jordan elimination
-2. Computing the inverse of a linear transformation
-3. The fundamental theorem of linear algebra
-4. CR decomposition
-5. The determinant
+1. Recap on matrices as linear transformations
+2. Elimination
+3. Computing the inverse of a linear transformation
+4. The fundamental theorem of linear algebra
+5. CR decomposition
+6. The determinant
 
 
 # Required Content
 
-1. [What does elimination do? (00:00)](https://randomvideo.org)
+1. [Primer on elimination](https://drive.google.com/file/d/1jbCJo97AVQvsGYwUGM2im1JravGs5BXJ/view?usp=sharing)
 2. [The determinant (10:02)](https://www.youtube.com/watch?v=Ip3X9LOh2dk&list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab&index=6)
 
 # Exercises
 
+Pending
 
 # Supplementary Content
 
