ADD: session 3 exercises

--- a/_posts/2020-10-21-session03.md
+++ b/_posts/2020-10-21-session03.md
@@ -16,12 +16,12 @@ tags:
 
 # Required Content
 
-1. [Primer on elimination](https://drive.google.com/file/d/1jbCJo97AVQvsGYwUGM2im1JravGs5BXJ/view?usp=sharing)
+1. [Elimination (34:58)](https://drive.google.com/file/d/1UDC0g4GgxazSA2bkySeJIFNCl_ZPXIhs/view?usp=sharing)
 2. [The determinant (10:02)](https://www.youtube.com/watch?v=Ip3X9LOh2dk&list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab&index=6)
 
 # Exercises
 
-Pending
+[Exercises]({{ site.baseurl }}{% link exercises/exercises-session3.pdf  %})
 
 # Supplementary Content
 
