UPDATE: post content and linked docs

--- a/_posts/2020-10-14-session01.md
+++ b/_posts/2020-10-14-session01.md
@@ -34,7 +34,7 @@ Official syllabus pending
 
 # Session Notes
 
-[session 1 whiteboard]({{ site.baseurl }}{% link docs/session-1-20201014.pdf %})
+[Session Notes]({{ site.baseurl }}{% link docs/session-1-20201014.pdf %})
 
 
 # Homework
