--- a/_posts/2020-10-21-session03.md
+++ b/_posts/2020-10-21-session03.md
@@ -19,9 +19,16 @@ tags:
 1. [Elimination (34:58)](https://drive.google.com/file/d/1UDC0g4GgxazSA2bkySeJIFNCl_ZPXIhs/view?usp=sharing)
 2. [The determinant (10:02)](https://www.youtube.com/watch?v=Ip3X9LOh2dk&list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab&index=6)
 
+
+# Session Notes
+
+[Session Notes]({{ site.baseurl }}{% link docs/session-3.pdf  %})
+
+
 # Exercises
 
 [Exercises]({{ site.baseurl }}{% link exercises/exercises-session3.pdf  %})
+
 
 # Supplementary Content
 
