--- a/_posts/2020-10-19-session02.md
+++ b/_posts/2020-10-19-session02.md
@@ -25,11 +25,11 @@ tags:
 
 # Session Crash Recovery
 
-[Recording of the last part of session](https://drive.google.com/file/d/1Kh4XgmbLn-ohDN_F-D3ngqxOLdXc87Gz/view?usp=sharing)
+[Recording of the last part of the session](https://drive.google.com/file/d/1Kh4XgmbLn-ohDN_F-D3ngqxOLdXc87Gz/view?usp=sharing)
 
 # Session Notes
 
-[Whiteboard](https://drive.google.com/file/d/1Sp8ip3BFgJUh2H6JmaOaHgtpMwUbBnqT/view?usp=sharing)
+[Session Notes](https://drive.google.com/file/d/1Sp8ip3BFgJUh2H6JmaOaHgtpMwUbBnqT/view?usp=sharing)
 
 # Exercises
 
