NEW: Changed post required for session 5: change of basis

--- a/_posts/2020-10-28-session05.md
+++ b/_posts/2020-10-28-session05.md
@@ -8,12 +8,13 @@ tags:
 # Topics
 
 1. Change of basis
-2. Change of coordinates
-3. Linear maps seen through different bases
+2. Linear maps seen through different bases
+3. Crafting your own linear maps
 4. Exercise practice dojo
 
 # Required Content
 
+1. [Change of basis (12:50)](https://www.youtube.com/watch?v=P2LTAUO1TdA)
 
 # Exercises
 
