NEW: session 4 supplementary notes about trigonometry and planar rotations

--- a/_posts/2020-10-26-session04.md
+++ b/_posts/2020-10-26-session04.md
@@ -8,7 +8,6 @@ tags:
 
 [Tutorial on linear maps]({{ site.baseurl }}{% link docs/1-linear_transformations.html %})
 
-
 # Required Tasks
 
 Make sure to be well prepared for the session.
@@ -42,3 +41,8 @@ Check that you can access the following shiny app:
 - [pHeatmap](https://cran.r-project.org/web/packages/pheatmap/pheatmap.pdf)
 - [Seurat](https://cran.r-project.org/web/packages/Seurat/index.html)
 - [SeuratData](https://github.com/satijalab/seurat-data)
+
+# Supplementary Notes
+
+1. [Rotations in the Plane]({{ site.baseurl }}{% link docs/session-4-20201026.pdf  %})
+
