NEW: session 5 notes

--- a/_posts/2020-10-28-session05.md
+++ b/_posts/2020-10-28-session05.md
@@ -16,6 +16,13 @@ tags:
 
 1. [Change of basis (12:50)](https://www.youtube.com/watch?v=P2LTAUO1TdA)
 
+
+# Session Notes
+
+
+[Session Notes]({{ site.baseurl }}{% link docs/session-5-20201028-2.pdf  %})
+
+
 # Exercises
 
 [Exercises]({{ site.baseurl }}{% link exercises/exercises-session5.pdf  %})
