NEW: required content for session 6

--- a/_posts/2020-11-02-session06.md
+++ b/_posts/2020-11-02-session06.md
@@ -8,13 +8,19 @@ tags:
 # Topics
 
 1. Dot product and orthogonal vectors.
-2. Orthogonal matrices. Main properties: $ Q^t=Q^{-1} $
-3. Orthogonal spaces
-4. Important fact: $ N(A) \perp R(A) $ and $ N(A^t) \perp C(A) $
-5. QR decomposition and Gram-Schmidt algorithm
+2. Important facts: $ N(A) \perp R(A) $ and $ N(A^t) \perp C(A) $
+3. Orthogonal matrices. Main properties: $ Q^t=Q^{-1} $
+4. Orthogonal spaces
+5. QR decomposition and Gram-Schmidt
 6. Orthogonal projection
 
+
 # Required Content
+
+1. [Projection Matrices and Leasts Squares (48:04)](https://www.youtube.com/watch?v=osh80YCg_GM).
+You might watch this video in full as it is all relevant to the course, particularly for [session 7]({{ site.baseurl }}{% link _posts/2020-11-04-session07.md %}). 
+In case you do not have a lot of time, you can jump to timestamp <u>36:55</u> directly and watch till the end.
+2. [Orthogonal Matrices and Gram-Schmidt (49:09)](https://www.youtube.com/watch?v=0MtwqhIwdrI)
 
 
 # Exercises
@@ -22,5 +28,7 @@ tags:
 
 # Supplementary Content
 
-1. [Systems of linear equations can be seen as projections]({{ site.baseurl }}{% link docs/projection-simple.pdf  %})
-2. [Achieving QR with planar rotations](https://en.wikipedia.org/wiki/Givens_rotation)
+1. [Dot products and duality (14:11)](https://www.youtube.com/watch?v=LyGKycYT2v0&list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab&index=9)
+2. [Systems of linear equations can be seen as projections]({{ site.baseurl }}{% link docs/projection-simple.pdf  %})
+3. [Achieving QR with planar rotations](https://en.wikipedia.org/wiki/Givens_rotation)
+  
