NEW: added session 6 notes

--- a/_posts/2020-11-02-session06.md
+++ b/_posts/2020-11-02-session06.md
@@ -23,6 +23,11 @@ In case you do not have a lot of time, you can jump to timestamp <u>36:55</u> di
 2. [Orthogonal Matrices and Gram-Schmidt (49:09)](https://www.youtube.com/watch?v=0MtwqhIwdrI)
 
 
+# Session Notes
+
+[Session Notes]({{ site.baseurl }}{% link docs/session-6-20201102.pdf  %})
+
+
 # Exercises
 
 
