NEW: solution to exercise 6 from session 5

--- a/_posts/2020-10-28-session05.md
+++ b/_posts/2020-10-28-session05.md
@@ -25,4 +25,5 @@ tags:
 
 # Exercises
 
-[Exercises]({{ site.baseurl }}{% link exercises/exercises-session5.pdf  %})
+1. [Exercises]({{ site.baseurl }}{% link exercises/exercises-session5.pdf  %})
+2. [Solution to Exercise 6]({{ site.baseurl }}{% link exercises/exercise-6-session-5.pdf  %})
