NEW: add session 7 notes

--- a/_posts/2020-11-04-session07.md
+++ b/_posts/2020-11-04-session07.md
@@ -33,3 +33,9 @@ The majority of the reasoning and examples used in this tutorial come from the 4
 # Tools
 
 [Visualization of orthogonal projections in 3D space](https://massonix.shinyapps.io/projections_onto_subspaces/)
+
+
+# Session Notes
+
+[Session Notes]({{ site.baseurl }}{% link docs/session-7-tutorial-2.pdf %})
+
