NEW: special assignment under session 6

--- a/_posts/2020-11-02-session06.md
+++ b/_posts/2020-11-02-session06.md
@@ -30,10 +30,12 @@ In case you do not have a lot of time, you can jump to timestamp <u>36:55</u> di
 
 # Exercises
 
+[Special Assignment]({{ site.baseurl }}{% link exercises/special-assignment.pdf  %})
+
 
 # Supplementary Content
 
 1. [Dot products and duality (14:11)](https://www.youtube.com/watch?v=LyGKycYT2v0&list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab&index=9)
 2. [Systems of linear equations can be seen as projections]({{ site.baseurl }}{% link docs/projection-simple.pdf  %})
-3. [Achieving QR with planar rotations](https://en.wikipedia.org/wiki/Givens_rotation)
-  
+3. [Orthogonalization by means of elimination](https://www.jstor.org/stable/2324877)
+4. [Achieving QR with planar rotations](https://en.wikipedia.org/wiki/Givens_rotation)
