NEW: required content in session 8

--- a/_posts/2020-11-09-session08.md
+++ b/_posts/2020-11-09-session08.md
@@ -7,7 +7,7 @@ tags:
 # Topics
 
 1. Eigen-values/vectors/bases/spaces.
-2. How to compute eigenvalues and eigenspaces.
+2. How to compute eigenvalues, eigenvectors and eigenspaces.
 3. The symmetric case: $ S = QDQ^t $ with $ Q $ orthogonal and $ D $ diagonal.
 4. The general case $ A = XDX^{-1} $.
 5. Symmetric and non-negative definite case: matrices of the form $ A^tA $.
@@ -16,6 +16,8 @@ tags:
 
 # Required Content
 
+1. [Gilbert Strang: Lecture on eigenvalues and eigenvectors (51:22)](https://www.youtube.com/watch?v=cdZnhQjJu4I)
+2. [3Blue1Brown: Eigenvectors and eigenvalues (17:15)](https://www.youtube.com/watch?v=PFDu9oVAE-g)
 
 # Exercises
 
