NEW: session 8 notes

--- a/_posts/2020-11-09-session08.md
+++ b/_posts/2020-11-09-session08.md
@@ -19,6 +19,12 @@ tags:
 1. [Gilbert Strang: Lecture on eigenvalues and eigenvectors (51:22)](https://www.youtube.com/watch?v=cdZnhQjJu4I)
 2. [3Blue1Brown: Eigenvectors and eigenvalues (17:15)](https://www.youtube.com/watch?v=PFDu9oVAE-g)
 
+
+# Session Notes
+
+[Session Notes]({{ site.baseurl }}{% link docs/session-8.pdf  %})
+
+
 # Exercises
 
 
