NEW: session 9 notes

--- a/_posts/2020-11-11-session09.md
+++ b/_posts/2020-11-11-session09.md
@@ -21,7 +21,14 @@ tags:
 # Required Content
 
 
+
+# Session Notes
+
+[Session Notes]({{ site.baseurl }}{% link docs/session-9.pdf  %})
+
+
 # Exercises
+
 
 
 # Supplementary Content
