NEW: required content links session 11

--- a/_posts/2020-11-18-session11.md
+++ b/_posts/2020-11-18-session11.md
@@ -10,12 +10,17 @@ tags:
 1. What is a function? Function compostion.
 2. Continuity. Continuity is preserved by composition.
 3. Derivative. Basic properties of the derivative. 
-4. One rule to rule them all: the chain rule!
-5. Examples: affine functions, polynomials, exponentials, logarithms, rational functions.
+4. Approximation of functions by affine functions
+5. One rule to rule them all: the chain rule
+6. Examples: affine functions, polynomials, exponentials, logarithms, rational functions.
 
 
 # Required Content
 
+1. [The paradox of the derivative (17:56)](https://www.youtube.com/watch?v=9vKqVkMQHKk)
+2. [Another perspective of the derivative (up to 5:40)](https://www.youtube.com/watch?v=CfW845LNObM)
+3. [Derviative formulas through geometry (18:42)](https://www.youtube.com/watch?v=S0_qX4VJhMQ)
+4. [Visualizing the product rule (up to 8:40)](https://www.youtube.com/watch?v=YG15m2VwSjA)
 
 # Exercises
 
