NEW: required content links session 12

--- a/_posts/2020-11-23-session12.md
+++ b/_posts/2020-11-23-session12.md
@@ -6,14 +6,15 @@ tags:
 
 # Topics
 
-1. Approximation of functions by affine (linear) functions
-2. Finding polynomials with same value and derivatives at a point: Taylor polynomial.
-3. Critical points. Local extrema.
-4. Finding local extrema: examples of local optimization of functions in one variable.
-5. Maximum Likelihood Estimation
+1. Local approximation with Taylor's polynomial.
+2. Critical points. Local extrema.
+3. Finding local extrema: examples of local optimization of functions in one variable.
+4. Maximum Likelihood Estimation
 
 # Required Content
 
+1. [Higher order derivatives (5:38)](https://www.youtube.com/watch?v=BLkz5LGWihw)
+2. [Taylor series (up to 14:28)](https://www.youtube.com/watch?v=3d6DsjIBzJ4)
 
 # Exercises
 
