NEW: session 10 tutorial PCA instructions

--- a/_posts/2020-11-16-session10.md
+++ b/_posts/2020-11-16-session10.md
@@ -1,5 +1,14 @@
 ---
 layout: post
-title: "<b>session 10: tutorial on SVD</b>"
+title: "<b>session 10: tutorial on PCA</b>"
 tags:
 ---
+
+# Instructions
+
+[Tutorial on PCA]({{ site.baseurl }}{% link docs/3-principal_component_analysis_in_bioinformatics.html %})
+
+
+# Session Notes
+
+
