--- a/_posts/2020-11-18-session11.md
+++ b/_posts/2020-11-18-session11.md
@@ -7,12 +7,11 @@ tags:
 # Topics
 
 
-1. What is a function? Function compostion.
-2. Continuity. Continuity is preserved by composition.
-3. Derivative. Basic properties of the derivative. 
-4. Approximation of functions by affine functions
-5. One rule to rule them all: the chain rule
-6. Examples: affine functions, polynomials, exponentials, logarithms, rational functions.
+1. Motivation for the derivative: from classical statistics to machine learning.
+2. Derivative. Basic properties of the derivative. 
+3. Approximation of functions by affine functions
+4. One rule to rule them all: the chain rule
+5. Examples: affine functions, polynomials, exponentials, logarithms, rational functions.
 
 
 # Required Content
@@ -22,7 +21,3 @@ tags:
 3. [Derviative formulas through geometry (18:42)](https://www.youtube.com/watch?v=S0_qX4VJhMQ)
 4. [Visualizing the product rule (up to 8:40)](https://www.youtube.com/watch?v=YG15m2VwSjA)
 
-# Exercises
-
-
-# Supplementary Content
