NEW: session 8 supplementary content

--- a/_posts/2020-11-09-session08.md
+++ b/_posts/2020-11-09-session08.md
@@ -10,7 +10,7 @@ tags:
 2. How to compute eigenvalues, eigenvectors and eigenspaces.
 3. The symmetric case: $ S = QDQ^t $ with $ Q $ orthogonal and $ D $ diagonal.
 4. The general case $ A = XDX^{-1} $.
-5. Symmetric and non-negative definite case: matrices of the form $ A^tA $.
+5. Symmetric and non-negative-definite case: matrices of the form $ A^tA $.
 6. Reading linear maps through eigendecomposition
 
 
@@ -29,3 +29,6 @@ tags:
 
 
 # Supplementary Content
+
+1. von Luxburg, U. (2007). A tutorial on spectral clustering. Stat Comput 17, 395–416.
+
