NEW: session 11 notes

--- a/_posts/2020-11-18-session11.md
+++ b/_posts/2020-11-18-session11.md
@@ -21,3 +21,7 @@ tags:
 3. [Derviative formulas through geometry (18:42)](https://www.youtube.com/watch?v=S0_qX4VJhMQ)
 4. [Visualizing the product rule (up to 8:40)](https://www.youtube.com/watch?v=YG15m2VwSjA)
 
+# Session notes
+
+[Session Notes]({{ site.baseurl }}{% link docs/session-11.pdf  %})
+
