NEW: session notes and supplementary content for session 12

--- a/_posts/2020-11-23-session12.md
+++ b/_posts/2020-11-23-session12.md
@@ -16,8 +16,15 @@ tags:
 1. [Higher order derivatives (5:38)](https://www.youtube.com/watch?v=BLkz5LGWihw)
 2. [Taylor series (up to 14:28)](https://www.youtube.com/watch?v=3d6DsjIBzJ4)
 
+# Session Notes
+
+[Session Notes]({{ site.baseurl }}{% link docs/session-12.pdf %})
+
+
 # Exercises
 
 [Exercises]({{ site.baseurl }}{% link exercises/exercises-session12.pdf %})
 
 # Supplementary Content
+
+[Derivative of the exponential function (Khan Academy)](https://www.khanacademy.org/math/ap-calculus-ab/ab-differentiation-1-new/ab-2-7/a/proof-the-derivative-of-is)
