NEW: session 14 class notes and exercises

--- a/_posts/2020-11-30-session14.md
+++ b/_posts/2020-11-30-session14.md
@@ -7,19 +7,23 @@ tags:
 
 # Topics
 
-1. Local approximation of functions in several variables. Taylor approximation.
-2. Affine approximations with the gradient
-3. Hessian matrix and quadratic approximations
-4. Local optimization without contraints: vanishing of the gradient.
-5. Local optimization with contraints: method of Lagrange multipliers.
-5. Examples:
-    1. Ordinary Least Squares
-    2. Total Least Squares
-    3. Maximum Likelihood Estimation
+1. Affine approximations using the differential/jacobian/gradient. 
+2. Recap of parallel views of single-variable vs multi-variable case.
+   * Derivative vs Differential.
+   * Tangent line vs tangent space.
+   * Affine approximations.
+   * Higher degree approximations: Taylor polynomials.
+3. Hessian matrix and quadratic approximations.
+4. Classification of critical points.
 
 
-# Required Content
+# Session Notes
+
+[Session Notes]({{ site.baseurl }}{% link docs/session-14.pdf %})
 
 # Exercises
+
+[Exercises]({{ site.baseurl }}{% link exercises/exercises-session-14.pdf %})
+
 
 # Supplementary Content
