NEW: session 15 tutorial post and notebook

--- a/_posts/2020-12-02-session15.md
+++ b/_posts/2020-12-02-session15.md
@@ -1,15 +1,26 @@
 ---
 layout: post
-title: "<b>session 15: tutorial on MLE and backpropagation</b>"
+title: "<b>session 15: tutorial on MLE and regression</b>"
 tags:
 ---
 
-# Part 1
+# Instructions
 
-MLE exercise
+1. [Tutorial (HTML)]({{ site.baseurl }}{% link docs/4-mle_and_regression.html %})
+2. [Tutorial code (Rmd)]({{ site.baseurl }}{% link docs/4-mle_and_regression.Rmd %})
 
 
-# Part 2
 
-1. Neural net primer
-2. Fitting neural nets with backpropagation
+# Requirements
+
+## Packages
+
+Make sure to have the following packages installed:
+
+- [dslabs](https://cran.r-project.org/web/packages/dslabs/dslabs.pdf)
+- [rootSolve](https://cran.r-project.org/web/packages/rootSolve/vignettes/rootSolve.pdf)
+
+
+# Session Notes
+
+
