NEW: session 15 notes

--- a/_posts/2020-12-02-session15.md
+++ b/_posts/2020-12-02-session15.md
@@ -10,7 +10,6 @@ tags:
 2. [Tutorial code (Rmd)]({{ site.baseurl }}{% link docs/4-mle_and_regression.Rmd %})
 
 
-
 # Requirements
 
 ## Packages
@@ -22,5 +21,7 @@ Make sure to have the following packages installed:
 
 
 # Session Notes
+
+[Session Notes]({{ site.baseurl }}{% link docs/session-15.pdf %})
 
 
